WorkInProgress/Codeforces - Codeforces Round #680 (Div. 2, based on Moscow Team Olympiad)/A. Array Rearrangment/attic/stderr
[1m/Users/lsantel/Competitive-Programming/solutions/Codeforces - Codeforces Round #680 (Div. 2, based on Moscow Team Olympiad)/A. Array Rearrangment/sol.cpp:141:30: [0m[0;1;31merror: [0m[1mexpected '(' for function-style cast or type construction[0m
    sort(all(b), greater<int>);
[0;1;32m                 ~~~~~~~~~~~~^
[0m1 error generated.
